orders/orders-mf/k8s/cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orders-mf
  labels:
    app: orders-mf
spec:
  type: ClusterIP
  ports:
    - name: orders-mf
      protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: orders-mf
