orders/orders-mf/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orders-mf-service
  labels:
    app: orders-mf-service
spec:
  type: ClusterIP
  ports:
    - name: orders-mf
      protocol: TCP
      port: 3004
      targetPort: 3004
  selector:
    app: orders-mf-deployment
