orders/orders-mf/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: orders-mf-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: orders-mf.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: orders-mf-service
                port:
                  number: 3004
